--- a/Lab4/Config/DefaultEngine.ini
+++ b/Lab4/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [URL]
-GameName=Lab4
+GameName=InClass_Week5_A
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -15,8 +15,8 @@ GlobalDefaultServerGameMode=None
 MinimumiOSVersion=IOS_10
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Lab4")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Lab4")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/InClass_Week5_A")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/InClass_Week5_A")
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -66,24 +66,5 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/NavigationSystem.RecastNavMesh]
-AgentRadius=35.000000
-AgentMaxHeight=144.000000
-
-[/Script/NavigationSystem.NavigationSystemV1]
-CrowdManagerClass=/Script/AIModule.CrowdManager
-bAutoCreateNavigationData=True
-bSpawnNavDataInNavBoundsLevel=False
-bAllowClientSideNavigation=False
-bShouldDiscardSubLevelNavData=True
-bTickWhilePaused=False
-bInitialBuildingLocked=False
-bSkipAgentHeightCheckWhenPickingNavData=False
-DataGatheringMode=Instant
-bGenerateNavigationOnlyAroundNavigationInvokers=False
-ActiveTilesUpdateInterval=1.000000
-+SupportedAgents=(Name="Default",Color=(B=100,G=255,R=0,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavigationDataClassName=/Script/NavigationSystem.RecastNavMesh,AgentRadius=35.000000,AgentHeight=144.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=/Script/NavigationSystem.RecastNavMesh,bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
-DirtyAreasUpdateFreq=60.000000
 
 
