--- a/Lab6/Config/DefaultEngine.ini
+++ b/Lab6/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Lab6
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/ThirdPersonBP/Maps/fy_Lab6.fy_lab6
+GameDefaultMap=/Game/ThirdPersonBP/Maps/fy_Lab6.fy_lab6
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -12,7 +12,7 @@ GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPe
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_10
+MinimumiOSVersion=IOS_11
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Lab6")
